[package]
name = "super-maker"
version = "0.1.1"
edition = "2021"
description = "Data generator designed specifically for turbo-maker."
keywords = [
    "synthetic-data",
    "data-generator",
    "lorem",
    "content",
]
license = "MIT"
repository = "https://github.com/AndrewShedov/super-maker"
homepage = "https://shedov.top"